CREATES A HOME PAGE AND LIST PAGE
creates a home page that has a login button for users. adds a list page that displays
all the entries of that particular user.

--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -2,4 +2,6 @@
 
 {% block content %}
     <h1>WELCOME TO TASKED</h1>
+    <hr>
+    <h3>LOG IN TO CONTINUE <a href="#">click here</a></h3>
 {% endblock content %}
