--- a/todo/templates/todo/todo.html
+++ b/todo/templates/todo/todo.html
@@ -3,6 +3,14 @@
 {% block content %}
     <h1>WELCOME TO TASKED</h1>
     <h3>YOUR TASKS ARE AS BELOW  </h3>
+    <form method = 'POST' action="">
+        {% csrf_token %}
+
+        {{ form.as_p }}
+
+        <button type="submit">ADD</button>
+    </form>
+
     <table>
         <th>work description</th>
         <th>status</th>
