ADD TASK FEILD TO ENTER TASK
Task form that can add data into the database and sucessfully display it

--- a/todo/templates/todo/todo.html
+++ b/todo/templates/todo/todo.html
@@ -6,7 +6,7 @@
     <form method = 'POST' action="">
         {% csrf_token %}
 
-        {{ form.as_p }}
+        {{ form}}
 
         <button type="submit">ADD</button>
     </form>
