ADDED HEADER AND A FOOTER

--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
+
     {% if title %}
         <title> {{ title }} </title>
     {% else %}
@@ -11,7 +13,12 @@
     {% endif %}
 </head>
 <body>
-    {% block content %}
-    {% endblock content %}
+    <div >
+        {% include 'todo/header.html' %}
+        {% block content %}
+        {% endblock content %}
+        {% include 'todo/footer.html' %}
+    </div>
+    
 </body>
 </html>
