ADDS A USER LOGIN FUNCTION

--- a/user/templates/user/login.HTML
+++ b/user/templates/user/login.HTML
@@ -2,4 +2,9 @@
 
 {% block content %}
     <h1>LOGIN PAGE</h1>
+    <form action="" method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit"> LOG IN</button>
+    </form>
 {% endblock content %}
