--- a/todo/templates/todo/header.html
+++ b/todo/templates/todo/header.html
@@ -1,5 +1,5 @@
 <header>
-    <nav class="bg-white px-4 lg:px-6 py-6 dark:bg-yellow-400">
+    <nav class="bg-white px-4 lg:px-6 py-6 bg-yellow-400">
         <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
             <a href="#" class="flex items-center">
                 <img src="" class="mr-3 h-6 sm:h-9" alt="" />
