--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -1,7 +1,29 @@
 {% extends 'todo/base.html' %}
 
 {% block content %}
-    <h1>WELCOME TO TASKED</h1>
+
+    <div class = "py-60">
+        <h1 class = "text-neutral-800 text-center text-2xl">WELCOME TO</h1>
+        <h1 class = "text-neutral-800 text-center text-9xl font-bold"> TASKED </h1>
+        <h1 class = "text-neutral-800 text-center text-base"> A WebApp to manage your tasks ...</h1>
+        <div class = "mt-10 flex justify-center items-center">
+            <button
+                class="text-white bg-yellow-400 border-0 py-2 px-4 w-1/6 focus:outline-none hover:bg-amber-400 rounded">SIGN UP
+            </button>
+        </div>
+    </div>
     <hr>
-    <h3>LOG IN TO CONTINUE <a href="#">click here</a></h3>
+    <div>
+        {% include 'todo/pricing.html' %}
+    </div>
+    <hr>
+    <div class = "py-60">
+        <h1 class = "mb-10 text-neutral-800 text-center text-xl">TRY NOW BY SIGNING UP !!! </h1>
+        <div class = "flex justify-center items-center">
+            <button
+                class="text-white bg-yellow-400 border-0 py-2 px-4 w-1/6 focus:outline-none hover:bg-amber-400 rounded">SIGN UP
+            </button>
+        </div>
+        
+    </div>
 {% endblock content %}
