--- a/todo/templates/todo/footer.html
+++ b/todo/templates/todo/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-white rounded-lg sm:flex sm:items-center sm:justify-between p-4 sm:p-6 xl:p-8 dark:bg-yellow-400">
+<footer class="mt-auto bg-white rounded-lg sm:flex sm:items-center sm:justify-between p-4 sm:p-6 xl:p-8 dark:bg-yellow-400">
     <p class="mb-4 text-sm text-center text-neutral-800 dark:bg-yellow-400 sm:mb-0">
         &copy; 2022 - 2023 <a href="#" class="hover:underline" target="_blank">Tasked</a>. All rights reserved.
     </p>
