--- a/user/templates/user/login.HTML
+++ b/user/templates/user/login.HTML
@@ -1,10 +1,23 @@
 {% extends 'todo/base.html' %}
+{% load tailwind_filters %}
 
 {% block content %}
-    <h1>LOGIN PAGE</h1>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit"> LOG IN</button>
-    </form>
+
+        <div class = "max-w-lg mt-20 mx-auto">
+            <h1 class = 'mb-10 pb-5 font-bold text-neutral-800 text-center text-3xl border-b-2 border-yellow-400'>LOGIN PAGE</h1>
+
+            <form action="" method="POST">
+
+                {% csrf_token %}
+                {{ form|crispy }}
+            
+                <button type = 'submit' class="mt-4 w-1/3 bg-yellow-400 hover:bg-yellow-300 text-white font-bold py-2 px-4 border-b-4 border-yellow-500 hover:border-yellow-500 rounded">
+                    LOG IN
+                </button>
+
+            </form>
+
+            <p class = 'mt-5 pt-5 border-t-2 border-yellow-400'>Don't have an accout ? <a class = "text-yellow-400 hover:text-yellow-300" href="{% url 'signup' %}">SignUp</a></p>
+        </div>
+    
 {% endblock content %}
