--- a/user/templates/user/signup.html
+++ b/user/templates/user/signup.html
@@ -5,6 +5,8 @@
     <form action="" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit"> Sign Up </button>
+        <button
+            type="submit" class="flex items-center mt-auto text-white bg-yellow-400 border-0 py-2 px-4 w-full focus:outline-none hover:bg-amber-400 rounded">Sign Up
+        </button>
     </form>
 {% endblock content %}
