COMPLETELY STYLED WEBAPP - STYLED LOGOUT PAGE

--- a/user/templates/user/logout.html
+++ b/user/templates/user/logout.html
@@ -1,5 +1,8 @@
 {% extends 'todo/base.html' %}
 
 {% block content %}
-    <h1>You have sucessfully logged out !!! </h1>
+    <div class = "max-w-full mt-20 mx-auto">
+        <h1 class = 'mb-5 pb-5 font-bold text-neutral-800 text-center text-3xl'>YOU HAVE SUCESSFULLY LOGGED OUT</h1>
+        <p class = 'mb-10 py-5 border-t-4 border-yellow-400 text-center text-base'>Click here to login again ? <a class = "text-yellow-400 hover:text-yellow-300" href="{% url 'login' %}">LogIn</a></p>
+    </div>
 {% endblock content %}
